src/front/index.scss
$icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
@import '~bootstrap-sass/assets/stylesheets/bootstrap-sprockets';
@import '~bootstrap-sass/assets/stylesheets/bootstrap';

$font-primary: $font-family-base;
$font-secondary: $font-family-monospace;
$displacy: (text: $text-color, arrow: $gray-light, arrowhead: $gray, label: $gray-light, tag: $brand-success, tag-ent: $brand-info, tag-verb: $brand-danger, tag-noun: $brand-warning, tag-punct: $gray-light);
@import '~displacy/assets/css/_variables';
@import '~displacy/assets/css/_displacy-theme';

// inspired by https://github.com/twbs/bootstrap-sass/blob/v3.3.7/assets/stylesheets/bootstrap/_responsive-embed.scss
.overlay-parent {
  position: relative;
  display: block;
  overflow: hidden;

  .overlay {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    height: 100%;
    width: 100%;
  }
}

.height-100 { height: 100% !important; }

html, body { @extend .height-100; }

.unglish {
  @extend .height-100;
  .unglish-quill { height: 66.6%; }
  .unglish-displacy { height: 33.3%; overflow: auto; }
}

